# azooKey-Windows

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  azookey-server.lib  installer.iss  settings.json
.github/workflows/: actions.yml
client/: Cargo.toml
client/src/: engine.rs  lib.rs  register.rs  tsf.rs  utils.rs
client/src/engine/: client_action.rs  composition.rs  full_width.rs  input_mode.rs
client/src/tsf/: factory.rs  key_event_sink.rs  text_input_proccesor.rs  text_service.rs
crates/client/: Cargo.toml  build.rs
crates/client/res/: res.h  res.rc
crates/client/src/: engine.rs  extension.rs  globals.rs  lib.rs  macros.rs  trace.rs  tracing_chrome.rs  tsf.rs
crates/client/src/engine/: azookey_service.rs  client_action.rs  composition.rs  full_width.rs  input_mode.rs  ipc_service.rs  roman2kana.rs  state.rs  text_util.rs  theme.rs  user_action.rs
crates/client/src/tsf/: display_attribute.rs  edit_session.rs  factory.rs  key_event_sink.rs  language_bar.rs  surrounded_text.rs  text_input_proccesor.rs  text_layout_sink.rs  text_service.rs  thread_mgr_event_sink.rs
crates/client/src/utils/: log.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/macros/src/: lib.rs
crates/protos/: service.proto  window.proto
crates/protos/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/shared/: Cargo.toml  build.rs  service.proto  window.proto
crates/shared/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: candidate.rs  indicator.rs  ipc.rs  main.rs  uiaccess.rs  utils.rs
docs/: memo.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src-tauri/: 2  Cargo.toml  installer.nsi  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: ipc.rs  lib.rs
frontend/src/components/: app-sidebar.tsx
frontend/src/components/ui/: select.tsx
frontend/src/pages/: about.tsx  appearance.tsx  general.tsx  zenzai.tsx
ime/: Cargo.toml
ime/src/: dll.rs  factory.rs  register.rs  ui.rs
ime/src/tsf/: composition_mgr.rs  display_attribute.rs  edit_session.rs  key_event_sink.rs  language_bar.rs  text_service.rs  thread_mgr_event_sink.rs
ime/src/utils/: macros.rs  winutils.rs
installer/: Azookey Startup.xml  CodeDependencies.iss  Installer.iss
ipc/: Cargo.toml
ipc/src/: socket.rs
playground/: Cargo.toml
playground/src/: main.rs
protos/: Cargo.toml  build.rs
res/: res.rc
scripts/: extract_fullwidth.py  ime.wsb  script.bat  script_main.bat  watch.py
server/: build.rs
server-swift/: Package.resolved  Package.swift  llama.lib
server-swift/.devcontainer/: devcontainer.json
server-swift/Sources/: azookey_server.swift
server-swift/Sources/azookey-server/: azookey_server.swift
server-swift/Sources/ffi/: ffi.c  module.modulemap
server-swift/Sources/ffi/include/: ffi.h
server-swift/Tests/azookey-serverTests/: azookey_serverTests.swift
src/: engine.rs  extension.rs  globals.rs  lib.rs  macros.rs  tsf.rs
src/engine/: client_action.rs  composition.rs  full_width.rs  input_mode.rs  roman2kana.rs  user_action.rs
src/tsf/: edit_session.rs  factory.rs  key_event_sink.rs  text_input_proccesor.rs  text_service.rs  thread_mgr_event_sink.rs
src/utils/: log.rs
