[package]
name = "ime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipc = { path = "../ipc" }
wry = "0.43.1"
anyhow = "1.0"
tao = "0.30.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_Networking_WinSock"
]

[build-dependencies]
embed-resource = "2.4.3"

[lints.clippy]
new_without_default  = "allow"
new_ret_no_self = "allow"