[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Networking_WinSock"
]

[build-dependencies]
prost-build = { version = "0.13" }