[package]
name = "azookey-windows"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
log = "0.4"
fern = "0.7.0"
chrono = "0.4.39"
windows-core = "0.58.0"
shared = { path = "../shared" }
macros = { path = "../macros" }
tonic = "0.12.3"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower = "0.5.1"
hyper-util = { version = "0.1.9", features = ["tokio"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-core = "0.1.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_Networking_WinSock"
]

[build-dependencies]
embed-resource = "3.0.1"
