[package]
name = "azookey-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
protos = { path = "../protos" }
async-stream = "0.3.6"
futures-core = "0.3.31"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security_Authorization",
]