[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
windows = "0.58.0"
tao = "0.31.0"
wry = "0.47.2"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
protos = { path = "../protos" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"