[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tao = "0.31.0"
wry = "0.47.2"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
shared = { path = "../shared" }
azookey-server = { path = "../server" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment"
]